# docs/swagger.json
@@ -6,6 +6,87 @@
         "version": "0.1.0"
     },
     "paths": {
+        "/api.php": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payment"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "act",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "key",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "out_trade_no",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "pid",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "trade_no",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/payment.QueryMerchantOrderResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payment"
+                ],
+                "parameters": [
+                    {
+                        "description": "退款请求",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/payment.RefundOrderRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/payment.RefundMerchantOrderResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/admin/system-configs": {
             "get": {
                 "produces": [
@@ -971,7 +1052,7 @@
             "required": [
                 "app_homepage_url",
                 "app_name",
-                "redirect_uri"
+                "notify_url"
             ],
             "properties": {
                 "app_description": {
@@ -985,6 +1066,10 @@
                 "app_name": {
                     "type": "string",
                     "maxLength": 20
+                },
+                "notify_url": {
+                    "type": "string",
+                    "maxLength": 100
                 },
                 "redirect_uri": {
                     "type": "string",
@@ -1006,6 +1091,10 @@
                 "app_name": {
                     "type": "string",
                     "maxLength": 20
+                },
+                "notify_url": {
+                    "type": "string",
+                    "maxLength": 100
                 },
                 "redirect_uri": {
                     "type": "string",
@@ -1123,6 +1212,94 @@
                 "pay_key": {
                     "type": "string",
                     "maxLength": 10
+                }
+            }
+        },
+        "payment.QueryMerchantOrderResponse": {
+            "type": "object",
+            "properties": {
+                "addtime": {
+                    "type": "string",
+                    "example": "2023-12-08 12:00:00"
+                },
+                "code": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "endtime": {
+                    "type": "string",
+                    "example": "2023-12-08 12:05:00"
+                },
+                "money": {
+                    "type": "string",
+                    "example": "10.00"
+                },
+                "msg": {
+                    "type": "string",
+                    "example": "查询订单号成功！"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "商品名称"
+                },
+                "out_trade_no": {
+                    "type": "string",
+                    "example": "M202312080001"
+                },
+                "pid": {
+                    "type": "string",
+                    "example": "1001"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "trade_no": {
+                    "type": "string",
+                    "example": "123456"
+                },
+                "type": {
+                    "type": "string",
+                    "example": "epay"
+                }
+            }
+        },
+        "payment.RefundMerchantOrderResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "msg": {
+                    "type": "string",
+                    "example": "退款成功"
+                }
+            }
+        },
+        "payment.RefundOrderRequest": {
+            "type": "object",
+            "required": [
+                "key",
+                "money",
+                "pid",
+                "trade_no"
+            ],
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "money": {
+                    "type": "number"
+                },
+                "out_trade_no": {
+                    "type": "string"
+                },
+                "pid": {
+                    "type": "string"
+                },
+                "trade_no": {
+                    "type": "integer"
                 }
             }
         },
